@@ -1,3 +1,8 @@
+2004-03-04  Mike Kestner  <mkestner@ximian.com>
+
+	* Main/Base/Services/DebuggingService.cs : add Pause/Resume and make
+	IsRunning public.
+
 2004-03-04  Todd Berman  <tberman@sevenl.net>
 
 	* build/AddIns/SharpDevelopCore.addin: adding debug menu.
